# PaperSage

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DOCKER.md  Dockerfile  GEMINI.md  Makefile  README.md  README_EN.md  comparative_analysis.md  comprehensive_research_report.md  diffusion_analysis.md  docker-compose.openviking.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  research_summary.md  seed_tts_analysis.md  start.sh  transformer_analysis.md
.github/workflows/: claude.yml  claude_review.yml  publish.yml  quality.yml  test.yml
.sisyphus/notepads/2026-03-14-langgraph-refactor-todo/: issues.md  learnings.md
agent/: __init__.py  a2a_replan_policy.py  a2a_standard.py  agent_center_runner.py  archive.py  capabilities.py  context_governance.py  contracts.py  evidence.py  llm_provider.py  local_rag.py  logging_utils.py  method_compare_parser.py  metrics.py  mindmap_renderer.py  multi_agent_a2a.py  output_cleaner.py  paper_agent.py  paper_prompt.py  profiled_agent.py  profiles.py  rag_chunking.py  rag_hybrid.py  runtime_agent.py  schemas.py  scholarly_search.py  session_factory.py  session_state.py  settings.py  stream.py  turn_service.py  ui_helpers.py  workflow_router.py
agent/a2a/: __init__.py  coordinator.py  replan_policy.py  router.py  standard.py  state_machine.py
agent/adapters/: __init__.py  agent_session.py  archive.py  document.py  llm.py  openviking_runtime.py  project_store.py  rag.py  user_settings.py  viking_adapter.py
agent/adapters/sqlite/: __init__.py  project_repository.py
agent/application/: __init__.py  contracts.py  language.py  ports.py  runtime_tuning.py  turn.py  turn_engine.py
agent/capabilities/: __init__.py  document.py  planning.py  runtime.py  skill.py  team.py  web.py
agent/domain/: __init__.py  openviking_contracts.py  orchestration.py  request_context.py  revision_policy.py  todo_graph.py  trace.py
agent/memory/: __init__.py  extraction.py  policy.py  reconcile.py  repository.py  service.py  store.py
agent/middlewares/: __init__.py  builder.py  enhanced_todolist.py  llm_logger.py  mindmap_format.py  orchestration.py  plan.py  progressive_tool_disclosure.py  team.py  todolist.py  tool_selector.py  trace.py  turn_context.py  types.py
agent/orchestration/: __init__.py  a2a_bridge.py  async_policy.py  checkpointer.py  contracts.py  coordinator.py  executors.py  langgraph_plan_act.py  langgraph_route_node.py  langgraph_team_dag.py  orchestrator.py  planner.py  planning_service.py  policy_engine.py  retry_loop.py  role_dispatcher.py  snapshot_manager.py  state_machine.py  team_runtime.py  todo_scheduler.py
agent/prompts/: __init__.py  base.py  leader.py  paper_domain.py  reviewer.py  worker.py
agent/rag/: AGENTS.md  __init__.py  chunking.py  hybrid.py  local.py  vector_store.py
agent/skills/: loader.py
agent/subagent/: loader.py
agent/team/: __init__.py  runtime.py
agent/tools/: __init__.py  builder.py  document.py  local_ops.py  memory.py  paper_search.py  plan_tools.py  registry.py  skill.py  team.py  team_tools.py  todolist.py  types.py  utils.py  wait.py  web_search.py
configs/: openviking.yaml
docs/: 2026-03-01-科研人员论文阅读痛点与项目能力差距分析.md  agent-evals.md  github-actions.md
docs/plan/: 2026-03-08-阶段1迁移映射表.md  2026-03-08-项目架构治理与重构计划.md  2026-03-20-BaseAgent-ProfileCapability-重构方案.md
docs/plans/: 2026-02-26-agent-refactor-phase-plan.md  2026-02-27-agent-ai-upgrade-research-report.md  2026-02-27-evidence-grounded-qa-implementation-plan.md  2026-02-28-rag-chunking-rerank-upgrade-plan.md  2026-03-01-paper-reading-assistant-iteration-plan.md  2026-03-14-langgraph-refactor-todo.md
docs/todo/: 2026-03-20-base-agent-profile-capability-todo.md
pages/: 0_🤖_Agent中心.py  1_file_center.py  1_📁_文件中心.py  2_settings.py  2_⚙️_设置中心.py  3_project_center.py  3_🗂️_项目中心.py
scripts/: claude_pre_git_commit_hook.py  python_cleanup.py  quality_gate.sh  release.sh  verify_openviking_env.py
tests/benchmark/: test_langgraph_performance.py
tests/evals/: run_agent_task_completion_baseline.py  run_agent_task_completion_live_smoke.py  run_phase0_router_baseline.py  test_agent_task_eval_fixture.py  test_live_smoke_runner.py  test_phase0_router_fixture.py
tests/integration/: test_agentic_memory_pipeline.py  test_leader_teammate_orchestration_e2e.py  test_live_api_e2e.py  test_multi_agent_team_e2e.py  test_pages_boot_e2e.py  test_plan_mode_e2e.py  test_real_papers_project_e2e.py  test_real_scene_e2e.py  test_refactored_multi_agent_e2e.py  test_streamlit_e2e.py  test_todolist_middleware_e2e.py  test_tool_search.py  test_tool_search_skill.py
tests/unit/: AGENTS.md  conftest.py  test_a2a_bridge.py  test_a2a_replan_policy.py  test_a2a_standard.py  test_a2a_state_machine.py  test_adapters_layer.py  test_agent_archive.py  test_agent_capabilities.py  test_agent_center_agent_runtime.py  test_agent_center_controller.py  test_agent_center_conversation_state.py  test_agent_center_execution.py  test_agent_center_facade.py  test_agent_center_page_orchestrator.py  test_agent_center_project_sessions.py  test_agent_center_runtime_state.py  test_agent_center_sidebar.py  test_agent_center_turn_execution.py  test_agent_center_turn_state.py  test_agent_center_turn_view.py  test_agent_contracts.py  test_agent_evals.py  test_agent_metrics.py  test_agent_schemas.py  test_agent_stream.py  test_checkpointer.py  test_contents_persistence.py  test_context_governance.py  test_db_migrations.py  test_document_parsing_markitdown.py  test_document_tools.py  test_domain_trace.py  test_evidence_payload_schema.py  test_file_insert_schema.py  test_github_workflows.py  test_langgraph_plan_act.py  test_langgraph_route_node.py  test_langgraph_team_dag.py  test_language_application.py  (+74 more)
tools/mindmap-cli/: README.md  go.mod  main.go
ui/: agent_center_page.py  agent_center_sidebar.py  agent_center_turn_view.py  page_bootstrap.py  project_workspace.py  theme.py
ui/agent_center/: __init__.py  controller.py  state.py
utils/: AGENTS.md  __init__.py  compare_parser.py  page_helpers.py  schemas.py  task_queue.py  tasks.py  utils.py
(+113 files in other folders)
