[project]
name = "llm-app"
version = "1.0.0"
description = "一个基于人工智能的文献阅读辅助工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.54.0,<1.55.0",
    "streamlit-extras>=0.3.0",
    "streamlit-echarts>=0.4.0",
    "pymupdf>=1.24.0,<2.0.0",
    "markitdown>=0.1.0",
    "openai>=2.20.0,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pyecharts>=2.0.7,<2.1.0",
    "duckduckgo-search>=6.3.7,<6.4.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-community>=0.4.0,<0.5.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "fastembed>=0.7.1,<1.0.0",
    "flashrank>=0.2.10,<1.0.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "a2a-sdk>=0.3.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 对于应用项目，使用 uv sync --no-install-project 只安装依赖
# 或者直接使用 uv pip install 安装依赖

[tool.hatch.build.targets.wheel]
# 对于应用项目，使用 only-include 包含所有 Python 文件
only-include = [
    "agent/**/*.py",
    "utils/**/*.py",
    "pages/**/*.py",
    "main.py",
]
