[project]
name = "paper-sage"
version = "1.0.1"
description = "AI-powered literature reading assistant with multi-agent orchestration and hybrid RAG"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "0verL1nk" },
]
keywords = ["agent", "rag", "paper", "langchain", "langgraph", "multi-agent", "literature"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "streamlit>=1.54.0,<1.55.0",
    "streamlit-extras>=0.3.0",
    "streamlit-echarts>=0.4.0",
    "pymupdf>=1.24.0,<2.0.0",
    "markitdown>=0.1.0",
    "openai>=2.20.0,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pyecharts>=2.0.7,<2.1.0",
    "duckduckgo-search>=6.3.7,<6.4.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-community>=0.4.0,<0.5.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langgraph>=0.3.0",
    "fastembed>=0.7.1,<1.0.0",
    "flashrank>=0.2.10,<1.0.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "a2a-sdk>=0.3.24",
]

[project.urls]
Homepage = "https://github.com/0verL1nk/PaperSage"
Repository = "https://github.com/0verL1nk/PaperSage"
Issues = "https://github.com/0verL1nk/PaperSage/issues"
Changelog = "https://github.com/0verL1nk/PaperSage/blob/main/CHANGELOG.md"

[project.optional-dependencies]
bm25 = [
    "rank-bm25>=0.2.2",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "rank-bm25>=0.2.2",
]

[project.scripts]
paper-sage = "main:_cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 对于应用项目，使用 uv sync --no-install-project 只安装依赖
# 或者直接使用 uv pip install 安装依赖

[tool.hatch.build.targets.wheel]
packages = ["agent", "utils", "ui", "pages"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[tool.hatch.build.targets.sdist]
include = [
    "agent/",
    "utils/",
    "ui/",
    "pages/",
    "main.py",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

# --- Non-Python resources (SKILL.md etc.) ---
[tool.hatch.build]
artifacts = [
    "agent/skills/*/SKILL.md",
]
