[project]
name = "paper-sage"
version = "1.0.5"
description = "AI-powered literature reading assistant with multi-agent orchestration and hybrid RAG"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "0verL1nk" },
]
keywords = ["agent", "rag", "paper", "langchain", "langgraph", "multi-agent", "literature"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "streamlit>=1.54.0,<1.55.0",
    "streamlit-extras>=0.3.0",
    "streamlit-echarts>=0.4.0",
    "typing-extensions>=4.12.0",
    "pymupdf>=1.24.0,<2.0.0",
    "markitdown>=0.1.0",
    "openai>=2.20.0,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
    "urllib3>=2.0.0",
    "pyecharts>=2.0.7,<2.1.0",
    "duckduckgo-search>=6.3.7,<6.4.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-community>=0.4.0,<0.5.0",
    "langchain-chroma>=0.2.0,<1.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "chromadb>=0.5.23,<1.0.0",
    "deepagents>=0.4.11,<0.5.0",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0,<4.0.0",
    "fastembed>=0.7.1,<1.0.0",
    "flashrank>=0.2.10,<1.0.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "a2a-sdk>=0.3.24",
]

[project.urls]
Homepage = "https://github.com/0verL1nk/PaperSage"
Repository = "https://github.com/0verL1nk/PaperSage"
Issues = "https://github.com/0verL1nk/PaperSage/issues"
Changelog = "https://github.com/0verL1nk/PaperSage/blob/main/CHANGELOG.md"

[project.optional-dependencies]
bm25 = [
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
]
dev = [
    "agentevals",
    "langsmith",
    "jieba>=0.42.1",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "rank-bm25>=0.2.2",
    "ruff>=0.12.0,<0.13.0",
    "mypy>=1.17.0,<1.18.0",
    "autoflake>=2.3.1,<3.0.0",
    "vulture>=2.11,<3.0.0",
]

[project.scripts]
paper-sage = "main:_cli_entry"
papersage = "main:_cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 对于应用项目，使用 uv sync --no-install-project 只安装依赖
# 或者直接使用 uv pip install 安装依赖

[tool.hatch.build.targets.wheel]
packages = ["agent", "utils", "ui"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
"pages/0_agent_center.py" = "pages/0_agent_center.py"
"pages/1_file_center.py" = "pages/1_file_center.py"
"pages/2_settings.py" = "pages/2_settings.py"
"pages/3_project_center.py" = "pages/3_project_center.py"

[tool.hatch.build.targets.sdist]
include = [
    "agent/",
    "utils/",
    "ui/",
    "pages/",
    "main.py",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

# --- Non-Python resources (SKILL.md etc.) ---
[tool.hatch.build]
artifacts = [
    "agent/skills/*/SKILL.md",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true
ignore-init-module-imports = true

[tool.vulture]
paths = [
    "main.py",
    "agent",
    "ui",
    "pages",
    "utils",
    "scripts",
    "tests",
]
exclude = [
    ".venv/",
    ".git/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".uv-cache/",
    "dist/",
    "docs/",
    "models/",
    "uploads/",
]
ignore_names = [
    "test_*",
    "_*",
]
min_confidence = 60
sort_by_size = true

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = false
no_implicit_optional = true
exclude = [
    "^tests/",
    "^docs/",
    "^pages/",
    "^utils/",
]
files = [
    "main.py",
    "agent/domain",
    "agent/tools",
    "agent/application/contracts.py",
]
